--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-chatbot",
+  "name": "ai-angkor-intelligence",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -18,14 +18,16 @@
     "db:up": "drizzle-kit up"
   },
   "dependencies": {
-    "@ai-sdk/fireworks": "^0.1.8",
+    "@ai-sdk/fireworks": "^0.1.12",
     "@ai-sdk/openai": "1.1.9",
+    "@ai-sdk/xai": "^1.1.12",
     "@codemirror/lang-javascript": "^6.2.2",
     "@codemirror/lang-python": "^6.1.6",
     "@codemirror/state": "^6.5.0",
     "@codemirror/theme-one-dark": "^6.1.2",
     "@codemirror/view": "^6.35.3",
     "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
