--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
+    "@ai-sdk/fireworks": "^0.1.12",
     "@ai-sdk/openai": "^1.1.9",
     "@ai-sdk/xai": "^1.1.12",
-    "@ai-sdk/fireworks": "^0.1.12",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "15.4.0-canary.51",
+    "@plaiceholder/next": "^3.0.0",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -29,6 +33,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@radix-ui/react-visually-hidden": "^1.1.0",
+    "@types/mdx": "^2.0.13",
     "@vercel/analytics": "^1.3.2",
     "@vercel/blob": "^0.24.1",
     "@vercel/postgres": "^0.10.0",
@@ -40,18 +45,21 @@
     "drizzle-orm": "^0.34.0",
     "framer-motion": "^11.3.19",
     "geist": "^1.3.1",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.446.0",
     "nanoid": "^5.0.8",
     "next": "^15.0.3",
     "next-auth": "^5.0.0-beta.25",
-    "next-themes": "^0.3.0",
+    "next-mdx-remote": "^5.0.0",
+    "plaiceholder": "^3.0.0",
     "postgres": "^3.4.4",
-    "react": "^19.0.0-rc",
-    "react-dom": "^19.0.0-rc",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.1.7",
     "remark-gfm": "^4.0.0",
     "server-only": "^0.0.1",
+    "sharp": "^0.34.2",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
@@ -63,6 +71,7 @@
     "@types/node": "^22.8.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.25.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.5",
@@ -73,4 +82,4 @@
   "engines": {
     "node": ">=18.0.0"
   }
-} 
+}
